--- a/templates/special.html
+++ b/templates/special.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    this is special because
-    {{.fname}} {{.lname}}
+{{template "header"}}
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid alias perferendis eligendi facilis id, reprehenderit unde corporis voluptas fuga ipsam praesentium, repudiandae saepe magnam illo quasi dolor sed officiis voluptate?
+</p>
 
-    <a href="/account/:{{.id}}">click here</a>
-</body>
-</html>
+<a href="/test/{{.id}}">test</a>
+
+{{template "footer"}}
