--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -1,4 +1,6 @@
 {{template "header"}}
-dfsdsfds
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid alias perferendis eligendi facilis id, reprehenderit unde corporis voluptas fuga ipsam praesentium, repudiandae saepe magnam illo quasi dolor sed officiis voluptate?
+</p>
 
 {{template "footer"}}
